辅导员班级数组

--- a/views/common/register.tmpl
+++ b/views/common/register.tmpl
@@ -151,10 +151,7 @@
   					shade: 0.8,
 					area: ['50%','90%'],
 					fixed: false,
-					content: response.Redirect + "?ReqModify=true"
-					//success: function(layero, index) {
-					//	layer.iframeAuto(index);
-					//}
+					content: response.Redirect + "?ReqModify=1"
 				});
 			}
 		}
