--- a/views/counselor/profileForm.tmpl
+++ b/views/counselor/profileForm.tmpl
@@ -62,16 +62,16 @@
                 <label class="col-sm-2 form-control-label">班级</label>
                 <div class="col-sm-10">
                     <label class="checkbox-inline">
-                        <input type="checkbox" value="新闻学院专业1"> 新闻学院专业1
+                        <input type="checkbox" name="class[]" value="新闻学院专业1"> 新闻学院专业1
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" value="新闻学院专业2"> 新闻学院专业2
+                        <input type="checkbox" name="class[]" value="新闻学院专业2"> 新闻学院专业2
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" value="新闻学院专业3"> 新闻学院专业3
+                        <input type="checkbox" name="class[]" value="新闻学院专业3"> 新闻学院专业3
                     </label>
                     <label class="checkbox-inline">
-                        <input type="checkbox" value="新闻学院专业4"> 新闻学院专业4
+                        <input type="checkbox" name="class[]" value="新闻学院专业4"> 新闻学院专业4
                     </label>
                 </div>
             </div>
