--- a/views/counselor/profile.tmpl
+++ b/views/counselor/profile.tmpl
@@ -3,44 +3,82 @@
 
 	<div class="container-fluid">
 		<div>
-			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-				<h1>{% .info.ID %},欢迎您！</h1>
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
+				<div class="container">
+					<p><a class="navbar-brand" href="/auth/1/{%.info.ID%}/profile">{% .info.Name %}</a>老师，欢迎您！</p>
+					<ul class="navbar-nav">
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+								Dropdown link
+							</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#">Link 1</a>
+								<a class="dropdown-item" href="#">Link 2</a>
+								<a class="dropdown-item" href="#">Link 3</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+								Dropdown link
+							</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#">Link 1</a>
+								<a class="dropdown-item" href="#">Link 2</a>
+								<a class="dropdown-item" href="#">Link 3</a>
+							</div>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+								Dropdown link
+							</a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" href="#">Link 1</a>
+								<a class="dropdown-item" href="#">Link 2</a>
+								<a class="dropdown-item" href="#">Link 3</a>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</nav>
 		</div>
-		<div class="row">
-			<div class="col-sm-2">
-				<ul class="list-group">
-					<a href="" class="list-group-item list-group-item-action active">修改信息</a>
-					<a href="" class="list-group-item list-group-item-action">国家助学金</a>
-					<a href="" class="list-group-item list-group-item-action">国家励志奖学金</a>
-					<a href="" class="list-group-item list-group-item-action">应善良助学金</a>
-				</ul>
-			</div>
-			<div class="col-sm-10">
+		<div class="row" style="margin-top:75px;margin-bottom:75px">
+			<div class="col-sm-12">
 				<form id="profileForm" method="POST">
-					<div class="form-group">
-						<label for="id">工号:</label>
-						<input id="id" class="form-control" name="id" value={% .info.ID %}>
+					<div class="form-group row">
+						<label for="id" class="col-sm-2 form-control-label">工号</label>
+						<div class="col-sm-10">
+							<input id="id" type="text" class="form-control" name="id" readonly value="{% .info.ID %}">
+						</div>
 					</div>
-					<div class="form-group">
-						<label for="name">姓名:</label>
-						<input id="name" class="form-control" name="name">
+					<div class="form-group row">
+						<label for="name" class="col-sm-2 form-control-label">姓名</label>
+						<div class="col-sm-10">
+							<input id="name" class="form-control" name="name" value={%.info.Name%}>
+						</div>
 					</div>
-					<div class="form-group">
-						<label for="college">学院:</label>
-						<input id="college" class="form-control" name="college">
+					<div class="form-group row">
+						<label for="grade" class="col-sm-2 form-control-label">年级</label>
+						<div class="col-sm-10">
+							<input id="grade" class="form-control" name="grade" value={%.info.Grade%}>
+						</div>
 					</div>
-					<div class="form-group">
-						<label for="grade">年级:</label>
-						<input id="grade" class="form-control" name="grade">
+					<div class="form-group row">
+						<label for="college" class="col-sm-2 form-control-label">学院</label>
+						<div class="col-sm-10">
+							<input id="college" class="form-control" name="college" value={%.info.College%}>
+						</div>
 					</div>
-					<div class="form-group">
-						<label for="class">班级:</label>
-						<input id="class" class="form-control" name="class">
+					<div class="form-group row">
+						<label for="class" class="col-sm-2 form-control-label">班级</label>
+						{% range .info.Classes %}
+							<label for="class" class="col-sm-2 form-control-label">{%.%}</label>
+						{% end %}
 					</div>
-					<div class="form-group">
-						<label for="phone">电话:</label>
-						<input id="phone" class="form-control" name="phone">
+					<div class="form-group row">
+						<label for="phone" class="col-sm-2 form-control-label">电话</label>
+						<div class="col-sm-10">
+							<input id="phone" class="form-control" name="phone" value={%.info.Phone%}>
+						</div>
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary">Submit</button>
@@ -48,8 +86,13 @@
 				</form>
 			</div>
 		</div>
-		
-		
+		<div>
+			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
+				<span class="navbar-text" style="width:100%;text-align:center;">
+					Copyright (c) 2017-2018 <a href="http://www.cqnu.edu.cn/">www.cqnu.edu.cn</a> All rights reserved. 渝ICP备 16012597号
+				</span>
+			</nav>
+		</div>
 	</div>
 
 	<script>
