--- a/views/counselor/profileForm.tmpl
+++ b/views/counselor/profileForm.tmpl
@@ -106,7 +106,7 @@
 			}
 			if (response.status==0) {
 				layer.alert("提交信息成功", {icon:6});
-				window.location.href="/auth/1/"+$("#id").val()+"/profile";
+				window.parent.location.href="/auth/1/"+$("#id").val()+"/profile";
 			}
 		}
 	</script>
