学生获取辅导员信息

--- a/views/counselor/profileForm.tmpl
+++ b/views/counselor/profileForm.tmpl
@@ -17,8 +17,8 @@
             </div>
             <div class="form-group row">
                 <label for="grade" class="col-sm-2 form-control-label">年级</label>
-                <div id="grade" class="col-sm-10">
-                    <select class="custom-select" name="grade">
+                <div class="col-sm-10">
+                    <select id="grade" class="custom-select" name="grade">
                         <option value="17级" selected>17级</option>
                         <option value="16级">16级</option>
                         <option value="15级">15级</option>
@@ -28,8 +28,8 @@
             </div>
             <div class="form-group row">
                 <label for="college" class="col-sm-2 form-control-label">院系</label>
-                <div id="college" class="col-sm-10">
-                    <select class="custom-select" onchange="ReloadClass();" name="college">
+                <div class="col-sm-10">
+                    <select id="college" class="custom-select" onchange="ReloadClass();" name="college">
                         <option value="新闻学院" selected>新闻学院</option>
                         <option value="旅游学院">旅游学院</option>
                         <option value="音乐学院">音乐学院</option>
