--- a/views/counselor/stateGrants.tmpl
+++ b/views/counselor/stateGrants.tmpl
@@ -1,5 +1,6 @@
 {% define "counselor/stateGrants.tmpl" %}
 {% template "common/header.tmpl" %}
+{% /*辅导员国家助学金页面*/ %}
 
     <div class="container-fluid">
         <div>
