--- a/views/student/stateGrants.tmpl
+++ b/views/student/stateGrants.tmpl
@@ -1,5 +1,6 @@
 {% define "student/stateGrants.tmpl" %}
 {% template "common/header.tmpl" %}
+{% /*学生国家助学金页面*/ %}
 
     <div class="container-fluid">
         <div>
