--- a/views/counselor/profile.tmpl
+++ b/views/counselor/profile.tmpl
@@ -1,5 +1,6 @@
 {% define "counselor/profile.tmpl" %}
 {% template "common/header.tmpl" %}
+{% /*辅导员个人信息*/ %}
 
 	<div class="container-fluid">
 		<div>
