--- a/views/studentOffice/profile.tmpl
+++ b/views/studentOffice/profile.tmpl
@@ -1,5 +1,6 @@
 {% define "studentOffice/profile.tmpl" %}
 {% template "common/header.tmpl" %}
+{% /*学生会 个人信息页面*/ %}
 
 	<div class="container-fluid">
 		<div>
