--- a/views/common/index.tmpl
+++ b/views/common/index.tmpl
@@ -1,6 +1,22 @@
-{% define "common/index.tmpl" %}
-{% template "common/header.tmpl" %}
-{%/*首页*/%}
+<html>
+<head>
+	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	   <link rel="stylesheet" href="../webframe/bootstrap/css/bootstrap.min.css">
+	   <link rel="stylesheet" href="../webframe/layer/skin/default/layer.css">
+	   <script type="text/javascript" src="../webframe/jquery/jquery-1.10.2.min.js"></script>
+	   <script type="text/javascript" src="../webframe/bootstrap/js/bootstrap.min.js"></script>
+       <script type="text/javascript" src="../webframe/jquery/jquery.form/jquery.form.js"></script>
+	   <script src="../webframe/layer//layer.js"></script>
+    </head>
+    <style type="text/css">
+	#ullist ul{
+		width: 400px;
+		height: 400px;
+		position: absolute;
+		overflow: hidden;
+		padding: 0px;	
 
 	<div class="container-fluid">
 		<div>
@@ -9,14 +25,48 @@
 					<a class="navbar-brand" href="/">Home</a>
 					<div class="justify-content-end">
 						<ul class="navbar-nav">
-							<li class="nav-item"><a class="nav-link" href="/login">Sign in</a></li>
-							<li class="nav-item"><a class="nav-link" href="/register">Sign up</a></li>
+							<li class="nav-item"><a class="nav-link" href="/login">登陆</a></li>
+							<li class="nav-item"><a class="nav-link" href="/register">注册</a></li>
 						</ul>
 					</div>
 				</div>
 			</nav>
-		</div>
-		<div style="margin-top:75px;margin-bottom:75px">
+			<div style="margin-top: 56px;">
+				<div style="display:inline-block;width:30%">
+					 <ul id="ullist" style="margin-top:15%;overflow: hidden;height: 300px;box-shadow: 0px 0px 20px #AFEEEE;padding: 0px;background-color: rgba(233, 245, 255, 0.5);border-radius: 20px">
+    	<li style="display: none;">
+    		<img src="img/1.jpg">	
+    	</li>
+    	<li style="display: none;">
+    		<img src="img/2.jpg">	
+    	</li>
+    	<li style="display: none;">
+    		<img src="img/3.jpg">	
+    	</li>
+    </ul>
+				</div>
+				
+				<div style="display:inline-block;width:30%;margin-right: 4%;margin-left: 4%;">
+				<ul style="margin-top:15%;overflow: hidden;height: 300px;box-shadow: 0px 0px 20px #AFEEEE;padding: 0px;background-color: rgba(233, 245, 255, 0.5);border-radius: 20px">
+					通知
+				</ul>
+				</div>
+				<div style="display:inline-block;width: 30%">
+					 <ul id="ullistright" style="margin-top:15%;overflow: hidden;height: 300px;box-shadow: 0px 0px 20px #AFEEEE;padding: 0px;background-color: rgba(233, 245, 255, 0.5);border-radius: 20px">
+    	<li style="display: none;">
+    		<img src="img/1.jpg">	
+    	</li>
+    	<li style="display: none;">
+    		<img src="img/2.jpg">	
+    	</li>
+    	<li style="display: none;">
+    		<img src="img/3.jpg">	
+    	</li>
+    </ul>
+				</div>
+				
+			</div>
+			
 		</div>
 		<div>
 			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
@@ -26,6 +76,44 @@
 			</nav>
 		</div>
 	</div>
+</body>
+<script type="text/javascript">
+	(function(){
+		var li=$("#ullist li");
+		ullistright
+		var imglength=li.length;
+		var n=-1;
+		var speed=1000;
+		var autospeed=3672;
+		autoroll();
+		function autoroll(){
+			n++;
+			if(n>=imglength){
+				n=0;
+			}
+			li.fadeOut(speed);
+			li.eq(n).fadeIn(speed);
+			var timer=setTimeout(autoroll,autospeed)
+		}
+		var li1=$("#ullistright li");
+		var imglength=li.length;
+		var n=-1;
+		var speed=1000;
+		var autospeed=3672;
+		autoroll1();
+		function autoroll1(){
+			n++;
+			if(n>=imglength){
+				n=0;
+			}
+			li1.fadeOut(speed);
+			li1.eq(n).fadeIn(speed);
+			var timer=setTimeout(autoroll1,autospeed)
+		}
+
+
+	})()
 	
-{% template "common/footer.tmpl" %}
-{% end %}
+
+</script>
+</html>
