--- a/views/student/views/profileForm.tmpl
+++ b/views/student/views/profileForm.tmpl
@@ -3,13 +3,12 @@
 	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	   <link rel="stylesheet" href="../webframe/bootstrap/css/bootstrap.min.css">
 	   <link rel="stylesheet" href="../webframe/layer/skin/default/layer.css">
-	    <link rel="stylesheet" href="css/profileForm.css">
+	   <link rel="stylesheet" href="assets/student/css/profileForm.css">
 	   <script type="text/javascript" src="../webframe/jquery/jquery-1.10.2.min.js"></script>
 	   <script type="text/javascript" src="../webframe/bootstrap/js/bootstrap.min.js"></script>
        <script type="text/javascript" src="../webframe/jquery/jquery.form/jquery.form.js"></script>
 	   <script src="../webframe/layer//layer.js"></script>
-		
-          <script src="js/profileForm.js"></script>	
+       <script src="assets/student/js/profileForm.js"></script>	
     </head>
     <body>
     <div class="container-fluid">
