--- a/views/common/index.html
+++ b/views/common/index.html
@@ -17,7 +17,8 @@
 		position: absolute;
 		overflow: hidden;
 		padding: 0px;	
-
+		</style>
+		<body>
 	<div class="container-fluid">
 		<div>
 			<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
