--- a/resources/views/common/index.html
+++ b/resources/views/common/index.html
@@ -1,3 +1,4 @@
+{% define "common/index.html" %}
 <html>
 <head>
 	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -118,3 +119,4 @@
 
 </script>
 </html>
+{% end %}
