--- a/resources/views/common/index.html
+++ b/resources/views/common/index.html
@@ -4,12 +4,12 @@
 	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-	   <link rel="stylesheet" href="../webframe/bootstrap/css/bootstrap.min.css">
-	   <link rel="stylesheet" href="../webframe/layer/skin/default/layer.css">
-	   <script type="text/javascript" src="../webframe/jquery/jquery-1.10.2.min.js"></script>
-	   <script type="text/javascript" src="../webframe/bootstrap/js/bootstrap.min.js"></script>
-       <script type="text/javascript" src="../webframe/jquery/jquery.form/jquery.form.js"></script>
-	   <script src="../webframe/layer//layer.js"></script>
+	   <link rel="stylesheet" href="resources/webframe/bootstrap/css/bootstrap.min.css">
+	   <link rel="stylesheet" href="resources/webframe/layer/skin/default/layer.css">
+	   <script type="text/javascript" src="resources/webframe/jquery/jquery-1.10.2.min.js"></script>
+	   <script type="text/javascript" src="resources/webframe/bootstrap/js/bootstrap.min.js"></script>
+       <script type="text/javascript" src="resources/webframe/jquery/jquery.form/jquery.form.js"></script>
+	   <script src="resources/webframe/layer//layer.js"></script>
     </head>
     <style type="text/css">
 	#ullist ul{
@@ -37,13 +37,13 @@
 				<div style="display:inline-block;width:30%">
 					 <ul id="ullist" style="margin-top:15%;overflow: hidden;height: 300px;box-shadow: 0px 0px 20px #AFEEEE;padding: 0px;background-color: rgba(233, 245, 255, 0.5);border-radius: 20px">
     	<li style="display: none;">
-    		<img src="img/1.jpg">	
+    		<img src="resources/assets/img/1.jpg">	
     	</li>
     	<li style="display: none;">
-    		<img src="img/2.jpg">	
+    		<img src="resources/assets/img/2.jpg">	
     	</li>
     	<li style="display: none;">
-    		<img src="img/3.jpg">	
+    		<img src="resources/assets/img/3.jpg">	
     	</li>
     </ul>
 				</div>
@@ -56,13 +56,13 @@
 				<div style="display:inline-block;width: 30%">
 					 <ul id="ullistright" style="margin-top:15%;overflow: hidden;height: 300px;box-shadow: 0px 0px 20px #AFEEEE;padding: 0px;background-color: rgba(233, 245, 255, 0.5);border-radius: 20px">
     	<li style="display: none;">
-    		<img src="img/1.jpg">	
+    		<img src="resources/assets/img/1.jpg">	
     	</li>
     	<li style="display: none;">
-    		<img src="img/2.jpg">	
+    		<img src="resources/assets/img/2.jpg">	
     	</li>
     	<li style="display: none;">
-    		<img src="img/3.jpg">	
+    		<img src="resources/assets/img/3.jpg">	
     	</li>
     </ul>
 				</div>
