静态资源处理

--- a/resources/views/common/index.html
+++ b/resources/views/common/index.html
@@ -4,8 +4,8 @@
 	    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-	   <link rel="stylesheet" href="resources/webframe/bootstrap/css/bootstrap.min.css">
-	   <link rel="stylesheet" href="resources/webframe/layer/skin/default/layer.css">
+	   <link rel="stylesheet" href="/resources/webframe/layer/skin/default/layer.css">
+	     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	   <script type="text/javascript" src="resources/webframe/jquery/jquery-1.10.2.min.js"></script>
 	   <script type="text/javascript" src="resources/webframe/bootstrap/js/bootstrap.min.js"></script>
        <script type="text/javascript" src="resources/webframe/jquery/jquery.form/jquery.form.js"></script>
@@ -18,7 +18,6 @@
 		position: absolute;
 		overflow: hidden;
 		padding: 0px;	
-
 	}
 	li{
 		list-style: none;
@@ -49,13 +48,6 @@
     	</li>
     	<li style="display: none;">
     		<img src="resources/assets/common/img/3.jpg">	
-    		<img src="resources/assets/img/1.jpg">	
-    	</li>
-    	<li style="display: none;">
-    		<img src="resources/assets/img/2.jpg">	
-    	</li>
-    	<li style="display: none;">
-    		<img src="resources/assets/img/3.jpg">	
     	</li>
     </ul>
 				</div>
@@ -74,14 +66,7 @@
     		<img src="resources/assets/common/img/2.jpg">	
     	</li>
     	<li style="display: none;">
-    		<img src="resources/assets/common/img/3.jpg">	
-    		<img src="resources/assets/img/1.jpg">	
-    	</li>
-    	<li style="display: none;">
-    		<img src="resources/assets/img/2.jpg">	
-    	</li>
-    	<li style="display: none;">
-    		<img src="resources/assets/img/3.jpg">	
+    		<img src="resources/assets/common/img/3.jpg">		
     	</li>
     </ul>
 				</div>
@@ -131,11 +116,8 @@
 			li1.eq(n).fadeIn(speed);
 			var timer=setTimeout(autoroll1,autospeed)
 		}
-
-
 	})()
 	
-
 </script>
 </html>
-{% end %}
+{%end%}
