--- a/resources/views/counselor/index.html
+++ b/resources/views/counselor/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>辅导员页面</title>
-  <link rel="stylesheet" href="resources/webframe/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="resources1/webframe/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="resources/webframe/bootstrap-table/src/bootstrap-table.css">
   <link rel="stylesheet" href="resources/webframe/layer/skin/default/layer.css">
   <script type="text/javascript" src="resources/webframe/jquery/jquery-1.10.2.min.js"></script>
@@ -31,9 +31,11 @@ body{
 }
 li{
   margin-top: 15px;
+  width: 100%
 }
 li a{
   color:#000;
+  width: 100%
 }
 li {
   list-style-type:none;
