修改数据库模型

--- a/resources/views/student/stateGrants.tmpl
+++ b/resources/views/student/stateGrants.tmpl
@@ -4,6 +4,17 @@
 
     <div class="container-fluid">
         <div>
+            {%range .sgdata%}
+                {%.SGID%}
+                {%.StudentID%}
+                {%.FSQuestionnaire%}
+                {%range .Accessory%}
+                    {%.%}
+                {%end%}
+                {%.Status%}
+            {%end%}
+        </div>
+        <div>
 			<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
 				<h2>{% .id %}，欢迎您！</h2>
 			</nav>
