--- a/resources/views/counselor/profileForm.html
+++ b/resources/views/counselor/profileForm.html
@@ -4,12 +4,12 @@
         <meta http-equiv="Content-Type" content="text/html;" charset=UTF-8>
         <meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-       <link rel="stylesheet" href="resources/webframe/bootstrap/css/bootstrap.min.css">
-       <link rel="stylesheet" href="resources/webframe/layer/skin/default/layer.css">
-       <link rel="stylesheet" href="resources/assets/student/css/profileForm.css">
-       <script type="text/javascript" src="resources/webframe/bootstrap/js/bootstrap.min.js"></script>
-       <script type="text/javascript" src="resources/webframe/jquery/jquery.form/jquery.form.js"></script>
-       <script src="resources/webframe/layer/layer.js"></script>
+       <link rel="stylesheet" href="/resources/webframe/bootstrap/css/bootstrap.min.css">
+       <link rel="stylesheet" href="/resources/webframe/layer/skin/default/layer.css">
+       <link rel="stylesheet" href="/resources/assets/student/css/profileForm.css">
+       <script type="text/javascript" src="/resources/webframe/bootstrap/js/bootstrap.min.js"></script>
+       <script type="text/javascript" src="/resources/webframe/jquery/jquery.form/jquery.form.js"></script>
+       <script src="/resources/webframe/layer/layer.js"></script>
     </head>
     <body>
     <div class="container-fluid">
@@ -29,19 +29,43 @@
             <div class="form-group row">
                 <label for="grade" class="col-sm-2 form-control-label">年级</label>
                 <div class="col-sm-10">
-                    <select id="grade" class="form-control" name="grade">
-                        <option value="" selected></option>
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
-                        <option value=""></option>
+                    <select id="grade" class="custom-select" name="grade">
+                        <option value="17级" selected>17级</option>
+                        <option value="16级">16级</option>
+                        <option value="15级">15级</option>
+                        <option value="14级">14级</option>
                     </select>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="college" class="col-sm-2 form-control-label">院系</label>
                 <div class="col-sm-10">
-                    <select id="college" class="form-control" name="college">
+                    <select id="college" class="custom-select" onchange="ReloadClass();" name="college">
+                        <option value="新闻学院" selected>新闻学院</option>
+                        <option value="旅游学院">旅游学院</option>
+                        <option value="音乐学院">音乐学院</option>
+                        <option value="幼儿师范学院">幼儿师范学院</option>
+                        <option value="特殊教育学院">特殊教育学院</option>
+                        <option value="马克思主义学院">马克思主义学院</option>
+                        <option value="历史与社会学院">历史与社会学院</option>
+                        <option value="教育科学学院">教育科学学院</option>
+                        <option value="体育与健康科学学院">体育与健康科学学院</option>
+                        <option value="文学院">文学院</option>
+                        <option value="外国语学院">外国语学院</option>
+                        <option value="音乐学院">音乐学院</option>
+                        <option value="美术学院">美术学院</option>
+                        <option value="新闻与传媒学院">新闻与传媒学院</option>
+                        <option value="数学科学学院">数学科学学院</option>
+                        <option value="物理与电子工程学院">物理与电子工程学院</option>
+                        <option value="化学学院">化学学院</option>
+                        <option value="生命科学学院">生命科学学院</option>
+                        <option value="地理与旅游学院">地理与旅游学院</option>
+                        <option value="经济与管理学院">经济与管理学院</option>
+                        <option value="计算机与信息科学学院">计算机与信息科学学院</option>
+                        <option value="初等教育学院">初等教育学院</option>
+                        <option value="继续教育学院">继续教育学院</option>
+                        <option value="国际汉语文化学院">国际汉语文化学院</option>
+                        <option value="职教师资学院">职教师资学院</option>
                     </select>
                 </div>
             </div>
