更正辅导员提交个人信息页面错误

--- a/resources/views/common/register.html
+++ b/resources/views/common/register.html
@@ -1,3 +1,4 @@
+{% define "common/register.html" %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,14 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>用户注册</title>
-    <link rel="stylesheet" href="resources/webframe/bootstrap-table/src/bootstrap-table.css">
-     <link rel="stylesheet" href="resources/webframe/layer/skin/default/layer.css">
+    <link rel="stylesheet" href="/resources/webframe/bootstrap-table/src/bootstrap-table.css">
+     <link rel="stylesheet" href="/resources/webframe/layer/skin/default/layer.css">
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-<script type="text/javascript" src="resources/webframe/jquery/jquery-1.10.2.min.js"></script>
-<script type="text/javascript" src="resources/webframe/bootstrap/js/bootstrap.min.js"></script>
-  <script src="resources/webframe/bootstrap-table/src/bootstrap-table.js"></script>
- <script src="resources/webframe/bootstrap-table/src/locale/bootstrap-table-zh-CN.js"></script>
-  <script src="resources/webframe/layer/layer.js"></script>
+<script type="text/javascript" src="/resources/webframe/jquery/jquery-1.10.2.min.js"></script>
+<script type="text/javascript" src="/resources/webframe/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/resources/webframe/bootstrap-table/src/bootstrap-table.js"></script>
+ <script src="/resources/webframe/bootstrap-table/src/locale/bootstrap-table-zh-CN.js"></script>
+  <script src="/resources/webframe/layer/layer.js"></script>
 </head>
 <body>
 <div class="container-fluid">
@@ -193,3 +194,4 @@
 	</script>
 </body>
 </html>
+{%end%}
