--- a/resources/views/student/profileForm.html
+++ b/resources/views/student/profileForm.html
@@ -1,4 +1,4 @@
-{% define "student/profileForm.html" %}
+{% define "common/profileForm.html" %}
 <html>
 <head>
         <meta http-equiv="Content-Type" content="text/html;" charset=UTF-8>
