--- a/resources/views/counselor/index.html
+++ b/resources/views/counselor/index.html
@@ -1,4 +1,4 @@
-{% define "counselor/index.html" %}
+{% define "studentOffice/index.html" %}
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>辅导员页面</title>
-  <link rel="stylesheet" href="/resources1/webframe/bootstrap/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/resources/webframe/bootstrap-table/src/bootstrap-table.css">
-  <link rel="stylesheet" href="/resources/webframe/layer/skin/default/layer.css">
-  <script type="text/javascript" src="/resources/webframe/jquery/jquery-1.10.2.min.js"></script>
-  <script type="text/javascript" src="/resources/webframe/bootstrap/js/bootstrap.min.js"></script>
-  <script src="/resources/webframe/bootstrap-table/src/bootstrap-table.js"></script>
-  <script src="/resources/webframe/bootstrap-table/src/locale/bootstrap-table-zh-CN.js"></script>
-  <script src="/resources/assets/counselor/js/counselor-index.js"></script>
-  <script src="/resources/webframe/layer/layer.js"></script>
+  <link rel="stylesheet" href="resources1/webframe/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="resources/webframe/bootstrap-table/src/bootstrap-table.css">
+  <link rel="stylesheet" href="resources/webframe/layer/skin/default/layer.css">
+  <script type="text/javascript" src="resources/webframe/jquery/jquery-1.10.2.min.js"></script>
+  <script type="text/javascript" src="resources/webframe/bootstrap/js/bootstrap.min.js"></script>
+  <script src="resources/webframe/bootstrap-table/src/bootstrap-table.js"></script>
+  <script src="resources/webframe/bootstrap-table/src/locale/bootstrap-table-zh-CN.js"></script>
+  <script src="resources/assets/counselor/js/counselor-index.js"></script>
+  <script src="resources/webframe/layer/layer.js"></script>
 </head>
 <style type="text/css">
 body{
